--- a/GalaxyWaves/Areas/Guide/Views/GuideEquipments/Index.cshtml
+++ b/GalaxyWaves/Areas/Guide/Views/GuideEquipments/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Galaxy.Core.Models.C_Level.Tools.Equipment>
+﻿@model IEnumerable<Galaxy.Core.Models.Guide.GuideEquipment>
 
 @{
     ViewData["Title"] = "Index";
