--- a/Main/Areas/Admin/Views/Categories/Edit.cshtml
+++ b/Main/Areas/Admin/Views/Categories/Edit.cshtml
@@ -12,11 +12,11 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="CategoryId" />
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="categoryName" class="control-label"></label>
+                <input asp-for="categoryName" class="form-control" />
+                <span asp-validation-for="categoryName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
