--- a/Main/Areas/Admin/Views/Roles_Users/CreateRole.cshtml
+++ b/Main/Areas/Admin/Views/Roles_Users/CreateRole.cshtml
@@ -1,21 +1,21 @@
-﻿@model Main.Areas.Admin.Models.Category
+﻿@model Main.Areas.Admin.Models.RoleViewModel.CreateRoleViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "CreateRole";
 }
 
-<h1>Create</h1>
+<h1>CreateRole</h1>
 
-<h4>Category</h4>
+<h4>CreateRoleViewModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="CreateRole">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="categoryName" class="control-label"></label>
-                <input asp-for="categoryName" class="form-control" />
-                <span asp-validation-for="categoryName" class="text-danger"></span>
+                <label asp-for="RoleName" class="control-label"></label>
+                <input asp-for="RoleName" class="form-control" />
+                <span asp-validation-for="RoleName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
