--- a/Main/Areas/Admin/Views/MusicEquipments/Details.cshtml
+++ b/Main/Areas/Admin/Views/MusicEquipments/Details.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.Img)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Img)
+            <img width="150px" src="@Url.Content(Model.Img)" />
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.About_It)
@@ -34,6 +34,13 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.About_It)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Price)$
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Price)$
+        </dd>
+        
     </dl>
 </div>
 <div>
