--- a/Main/Areas/Admin/Views/MusicEquipments/Edit.cshtml
+++ b/Main/Areas/Admin/Views/MusicEquipments/Edit.cshtml
@@ -1,16 +1,21 @@
-﻿@model Main.Areas.Admin.Models.MusicEquipment
+﻿@model Main.Areas.Admin.Models.ViewModel.MusicEquipmentViewModel
 
-@{
-    ViewData["Title"] = "Edit";
-}
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Edit music equipment</title>
+</head>
+<body>
 
 <h1>Edit</h1>
 
-<h4>MusicEquipment</h4>
+<h4>Music Equipment</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -23,6 +28,7 @@
                 <select asp-for="categoryName" class="form-control" asp-items="ViewBag.categoryName"></select>
                 <span asp-validation-for="categoryName" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Img" class="control-label"></label>
                 <input asp-for="Img" class="form-control" />
@@ -32,6 +38,11 @@
                 <label asp-for="About_It" class="control-label"></label>
                 <input asp-for="About_It" class="form-control" />
                 <span asp-validation-for="About_It" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input asp-for="Price" class="form-control" />
+                <label asp-for="Price" class="control-label">$</label>
+                <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
@@ -44,3 +55,5 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+            </body>
+            </html>
