--- a/Main/Areas/Departments/Views/Specializations/Index.cshtml
+++ b/Main/Areas/Departments/Views/Specializations/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Specialization>
+﻿@model IEnumerable<Main.Models.DepartmentModels.Specialization>
 
 @{
     ViewData["Title"] = "Index";
