--- a/Main/Areas/Departments/Views/Cores/Delete.cshtml
+++ b/Main/Areas/Departments/Views/Cores/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core
+﻿@model Main.Models.DepartmentModels.Core
 
 @{
     ViewData["Title"] = "Delete";
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.CoreName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SpecId)
+            @Html.DisplayNameFor(model => model.spec)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SpecId)
+            @Html.DisplayFor(model => model.spec.SpecName)
         </dd>
     </dl>
     
