--- a/Main/Areas/Departments/Views/Cores/Edit.cshtml
+++ b/Main/Areas/Departments/Views/Cores/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core
+﻿@model Main.Models.DepartmentModels.Core
 
 @{
     ViewData["Title"] = "Edit";
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="SpecId" class="control-label"></label>
-                <input asp-for="SpecId" class="form-control" />
+                <select asp-for="SpecId" class="form-control" asp-items="ViewBag.SpecId"></select>
                 <span asp-validation-for="SpecId" class="text-danger"></span>
             </div>
             <div class="form-group">
