--- a/Main/Areas/Departments/Views/_ViewImports.cshtml
+++ b/Main/Areas/Departments/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Main
 @using Main.Models
-@using Main.Models.DepartmentModels;
+@using Main.Models.TeacherModels;
+@using Main.Models.TeacherModels.ViewModel;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
