--- a/Main/Areas/Tutor/Views/Courses/Create.cshtml
+++ b/Main/Areas/Tutor/Views/Courses/Create.cshtml
@@ -1,26 +1,21 @@
-﻿@model CourseViewModel
+﻿@model Main.Models.TeacherModels.ViewModel.CourseViewModel
 
 <!DOCTYPE html>
 
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-
-    <script>
-
-    </script>
+    <title>Create Course</title>
 </head>
 <body>
-    <h1>Create</h1>
+<h1>Create</h1>
 
-   
-
-<h4>Course</h4>
+<h4>Course </h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" enctype="multipart/form-data">
+
+        <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="CourseName" class="control-label"></label>
@@ -33,13 +28,14 @@
                 <span asp-validation-for="CourseDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CourseVideo" class="control-label"></label>
-                <input asp-for="CourseVideo" class="form-control"/>
-                <span asp-validation-for="CourseVideo" class="text-danger"></span>
+                <label asp-for="CourseImg" class="control-label"></label>
+                <input asp-for="CourseImg" class="form-control" />
+                <span asp-validation-for="CourseImg" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TeacherID" class="control-label"></label>
-                <select asp-for="TeacherID" class ="form-control" asp-items="ViewBag.TeacherID"></select>
+                <label asp-for="CourseVideo" class="control-label"></label>
+                <input asp-for="CourseVideo" class="form-control" />
+                <span asp-validation-for="CourseVideo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CoreId" class="control-label"></label>
@@ -61,5 +57,5 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-</body>
-</html>
+         </body>
+            </html>
