--- a/Main/Areas/Tutor/Views/Courses/Edit.cshtml
+++ b/Main/Areas/Tutor/Views/Courses/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Course
+﻿@model Main.Models.TeacherModels.ViewModel.CourseViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -24,14 +24,14 @@
                 <span asp-validation-for="CourseDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="CourseImg" class="control-label"></label>
+                <input asp-for="CourseImg" class="form-control" />
+                <span asp-validation-for="CourseImg" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="CourseVideo" class="control-label"></label>
                 <input asp-for="CourseVideo" class="form-control" />
                 <span asp-validation-for="CourseVideo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TeacherID" class="control-label"></label>
-                <select asp-for="TeacherID" class="form-control" asp-items="ViewBag.TeacherID"></select>
-                <span asp-validation-for="TeacherID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CoreId" class="control-label"></label>
@@ -45,11 +45,6 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-
-
-            <div>
-                <video style="width: 547px; height: 308px; left: 0px; top: 0px;" tabindex="-1" class="video-stream html5-main-video" controlslist="nodownload" src="@Model.CourseVideo"></video>
             </div>
         </form>
     </div>
