--- a/Main/Views/_ViewImports.cshtml
+++ b/Main/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using Main
+@using Main.DataAccess
 @using Main.Models
+@using Main.Models.TeacherModels;
+@using Main.Models.AdminModels;
+@using Main.Models.WebAccessModel;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
