--- a/Main/Areas/Tutor/Views/Courses/Create.cshtml
+++ b/Main/Areas/Tutor/Views/Courses/Create.cshtml
@@ -15,7 +15,7 @@
 <div class="row">
     <div class="col-md-4">
 
-        <form asp-action="Create" method="post" enctype="multipart/form-data">
+        <form asp-action="Create" asp-controller="Courses" asp-area="Tutor" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="CourseName" class="control-label"></label>
