--- a/Main/Areas/Tutor/Views/Courses/Details.cshtml
+++ b/Main/Areas/Tutor/Views/Courses/Details.cshtml
@@ -4,49 +4,22 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>@Model.CourseName</h1>
 
 <div>
-    <h4>Course</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CourseName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CourseName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CourseDescription)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CourseDescription)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CourseImg)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CourseImg)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CourseVideo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CourseVideo)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Core)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Core.CoreName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-    </dl>
+   <div> 
+       <video autoplay="autoplay" width="800" height="900" >
+
+           <source src="@Model.CourseVideo" type="video/mp4" />  
+
+       </video>
+   </div>
+   <div> 
+       <h3>
+           <label asp-for="@Model.CourseDescription"></label>
+       </h3>
+       <p>@Model.CourseDescription</p>
+   </div>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.CourseId">Edit</a> |
