--- a/Main/Areas/Admin/Views/Categories/Create.cshtml
+++ b/Main/Areas/Admin/Views/Categories/Create.cshtml
@@ -4,27 +4,67 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>Category</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="categoryName" class="control-label"></label>
-                <input asp-for="categoryName" class="form-control" />
-                <span asp-validation-for="categoryName" class="text-danger"></span>
+
+
+
+<div class="contents">
+
+
+    <div class="new-ticket mt-1">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <div class="breadcrumb-main">
+                        <h4 class="text-capitalize breadcrumb-title">New Category</h4>
+                        <div class="breadcrumb-action justify-content-center flex-wrap">
+                            <nav aria-label="breadcrumb">
+                                <ol class="breadcrumb">
+                                    <li class="breadcrumb-item"><a asp-action="Index" asp-controller="Dashboard"><i class="uil uil-estate"></i>Dashboard</a></li>
+                                    <li class="breadcrumb-item"><a asp-action="Help" asp-area="" asp-controller="Profile">Support</a></li>
+                                    <li class="breadcrumb-item active" aria-current="page">New Category</li>
+                                </ol>
+                            </nav>
+                        </div>
+                    </div>
+
+                </div>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="row justify-content-center mb-50 mt-sm-25">
+                <div class="col-lg-8 col-sm-8">
+                    <div class="ticket_modal">
+                        <div class="ticket_modal-modal">
+                            <h1>
+                                <i></i>
+                                New Category
+                            </h1>
+                            <form method="post" asp-action="Create">
+                                <div asp-validation-summary="All" class="text-danger"></div>
+
+                                <div class="form-group">
+                                    <label>Category Name </label>
+                                    <input type="text" class="form-control"asp-for="categoryName">
+                                    <span asp-validation-for="categoryName" class="text-danger"></span>
+
+                                </div>
+                                
+                                <div class="button-group d-flex pt-16">
+                                    <button class="btn btn-primary btn-default btn-squared " type="submit">Create</button>
+
+                                    <a class="btn btn-primary btn-default btn-squared btn-transparent-primary " asp-action="Index" asp-controller="Dashboard"> DashBoard</a><i></i>
+                                    <a class="btn btn-primary btn-default btn-squared btn-transparent-primary " asp-action="Index">Cancel</a>
+                                    
+
+                                </div>
+                            </form>
+
+                        </div>
+                    </div>
+                </div>
             </div>
-        </form>
+            <!-- ends: .row -->
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
-
