--- a/Main/Areas/Admin/Views/MusicEquipments/Details.cshtml
+++ b/Main/Areas/Admin/Views/MusicEquipments/Details.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.Img)
         </dt>
         <dd class = "col-sm-10">
-            <img width="150px" src="@Url.Content(Model.Img)" />
+            <img width="200" src="@Url.Content(Model.Img)" />
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.About_It)
