--- a/Main/Areas/Admin/Views/Shared/Admin_Layout.cshtml
+++ b/Main/Areas/Admin/Views/Shared/Admin_Layout.cshtml
@@ -51,7 +51,7 @@
         <nav class="navbar navbar-light">
             <div class="navbar-left">
                 <div class="logo-area">
-                    <a class="navbar-brand" href="~/index.html">
+                    <a class="navbar-brand" asp-area="" asp-action="Index" asp-controller="Home">
                         <img class="dark" src="~/img/logo-dark.png" alt="logo">
                         <img class="light" src="~/img/logo-white.png" alt="logo">
                     </a>
