--- a/Main/Areas/Admin/Views/MusicEquipments/Index.cshtml
+++ b/Main/Areas/Admin/Views/MusicEquipments/Index.cshtml
@@ -2,13 +2,9 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "Admin_Layout";
 }
 
-<h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 
 <div class="contents" style="padding-top: 13px;">
 
