--- a/Main/Areas/Tutor/Views/Shared/Tutor_Layout.cshtml
+++ b/Main/Areas/Tutor/Views/Shared/Tutor_Layout.cshtml
@@ -1127,11 +1127,113 @@
                                             </div>
 
                                         </div>
+                                        <div class="cus-xl-3 col-lg-6 col-md-11 col-12 mb-30 px-10">
+
+                                            <div class="card product product--grid">
+                                                <div class="h-100">
+                                                    <div class="product-item">
+                                                        <div class="product-item__image">
+                                                            <span class="like-icon">
+                                                                <button type="button" class="content-center">
+                                                                    <i class="lar la-heart icon"></i>
+                                                                </button>
+                                                            </span>
+                                                            <a href="#"><img class="card-img-top img-fluid" src="~/img/coffe-glass.png" alt="digital-chair"></a>
+                                                        </div>
+                                                        <div class="card-body px-20 pb-25 pt-25">
+                                                            <div class="product-item__body text-capitalize">
+                                                                <a href="product-details.html">
+                                                                    <h6 class="card-title">Leo sodales varius</h6>
+                                                                </a>
+                                                                <div class="stars-rating d-flex align-items-center flex-wrap mb-10">
+                                                                    <span class="star-icon las la-star active"></span>
+                                                                    <span class="star-icon las la-star active"></span>
+                                                                    <span class="star-icon las la-star active"></span>
+                                                                    <span class="star-icon las la-star active"></span>
+                                                                    <span class="star-icon las la-star-half-alt active"></span>
+                                                                    <span class="stars-rating__point">4.9</span>
+                                                                    <span class="stars-rating__review">
+                                                                        <span>778</span> Reviews
+                                                                    </span>
+                                                                </div>
+                                                            </div>
+                                                            <div class="product-item__footer">
+
+                                                                <div class="d-flex align-items-center flex-wrap">
+                                                                    <span class="product-desc-price">$200.00</span>
+                                                                    <span class="product-price">$100.00</span>
+                                                                    <span class="product-discount">50% Off</span>
+                                                                </div>
+                                                            </div>
+                                                            <div class="product-item__button d-flex mt-20 flex-wrap">
+
+
+
+                                                                <button class="btn btn-default btn-squared color-light btn-outline-light px-20 ">
+                                                                    <img src="~/img/svg/shopping-bag.svg" alt="shopping-bag" class="svg">
+                                                                    Add To Cart
+                                                                </button>
+
+
+
+
+
+
+                                                                <button class="btn btn-primary btn-default btn-squared border-0 px-25">
+                                                                    buy now
+                                                                </button>
+
+
+
+
+
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                             <!-- End: Shop Item -->
-                           
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="user-pagination">
+                                        <div class="d-flex justify-content-lg-end justify-content-center mt-1 mb-30">
+
+                                            <nav class="dm-page ">
+                                                <ul class="dm-pagination d-flex">
+                                                    <li class="dm-pagination__item">
+                                                        <a href="#" class="dm-pagination__link pagination-control"><span class="la la-angle-left"></span></a>
+                                                        <a href="#" class="dm-pagination__link"><span class="page-number">1</span></a>
+                                                        <a href="#" class="dm-pagination__link active"><span class="page-number">2</span></a>
+                                                        <a href="#" class="dm-pagination__link"><span class="page-number">3</span></a>
+                                                        <a href="#" class="dm-pagination__link pagination-control"><span class="page-number">...</span></a>
+                                                        <a href="#" class="dm-pagination__link"><span class="page-number">12</span></a>
+                                                        <a href="#" class="dm-pagination__link pagination-control"><span class="la la-angle-right"></span></a>
+                                                        <a href="#" class="dm-pagination__option">
+                                                        </a>
+                                                    </li>
+                                                    <li class="dm-pagination__item">
+                                                        <div class="paging-option">
+                                                            <select name="page-number" class="page-selection">
+                                                                <option value="20">20/page</option>
+                                                                <option value="40">40/page</option>
+                                                                <option value="60">60/page</option>
+                                                            </select>
+                                                        </div>
+                                                    </li>
+                                                </ul>
+                                            </nav>
+
+
+                                        </div>
+                                        <!-- End of Pagination-->
+                                    </div>
+                                </div>
+                            </div>
                         </div><!-- End: .columns-2 -->
                     </div>
                 </div>
