--- a/Main/Areas/Admin/Views/MusicEquipments/ViewProduct.cshtml
+++ b/Main/Areas/Admin/Views/MusicEquipments/ViewProduct.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MusicEquipment
 
 <div class="contents">
-
+    <form action="post" enctype="multipart/form-data">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
@@ -36,39 +36,10 @@
                                     <div>
                                         <div class="carousel-inner">
                                             <div class="carousel-item active">
-                                                <img class="img-fluid d-flex bg-opacity-primary " src="~/img/furniture.jpg" alt="Card image cap" title="">
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img class="img-fluid d-flex bg-opacity-primary" src="~/img/furniture2.jpg" alt="Card image cap" title="">
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img class="img-fluid d-flex bg-opacity-primary" src="~/img/furniture3.jpg" alt="Card image cap" title="">
+                                                <img class="img-fluid d-flex bg-opacity-primary " src="@Url.Content(Model.Img)" alt="Card image cap" title="">
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="overflow-hidden">
-                                        <!-- Bottom switcher of slider -->
-                                        <ul class="reset-ul d-flex flex-wrap list-thumb-gallery">
-                                            <li>
-                                                <a href="#" class="thumbnail active" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1">
-                                                    <img class="img-fluid d-flex" src="~/img/furniture.jpg" alt="">
-                                                </a>
-                                            </li>
-
-                                            <li>
-                                                <a href="#" class="thumbnail " data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2">
-                                                    <img class="img-fluid d-flex" src="~/img/furniture2.jpg" alt="">
-                                                </a>
-                                            </li>
-
-                                            <li>
-                                                <a href="#" class="thumbnail " data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3">
-                                                    <img class="img-fluid d-flex" src="~/img/furniture3.jpg" alt="">
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
-
                                 </div>
                             </div>
                             <!-- End: Product Slider -->
@@ -81,8 +52,7 @@
                                     <div class="product-item__title">
                                         <a href="#">
                                             <h1 class="card-title">
-                                                This stools are also decently
-                                                stored
+                                                @Model.Name
                                             </h1>
                                         </a>
                                     </div>
@@ -109,18 +79,11 @@
                                             </span>
                                         </span>
                                         <span class="product-desc-price">
-                                            <sub>$</sub>200.00
+                                            <sub>$</sub> @Model.Price
                                         </span>
-                                        <div class="d-flex align-items-center mb-2">
-                                            <span class="product-price">$100.00</span>
-                                            <span class="product-discount">50% Off</span>
-                                        </div>
-                                        <!-- End: Product Brand -->
-                                        <!-- Start: Product Description -->
+                    
                                         <p class=" product-deatils-pera">
-                                            Lorem ipsum dolor sit amet, consetetur
-                                            sadipscing elitr, sed diam
-                                            nonumy eirmod tempor invidunt ut labore et dolore magna.
+                                            @Model.About_It
                                         </p>
                                         <!-- End: Product Description -->
                                         <!-- Start: Product Stock -->
@@ -223,5 +186,5 @@
         </div>
 
     </div>
-
+  </form>
 </div>
