--- a/Main/Areas/Admin/Views/Roles_Users/Index.cshtml
+++ b/Main/Areas/Admin/Views/Roles_Users/Index.cshtml
@@ -5,32 +5,95 @@
     ViewData["Title"] = "Index";
 }
 
-<h1 class="Title">List Of Roles</h1>
+<div class="contents">
 
-<p>
-    <a asp-action="CreateRole">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    <a asp-area ="Admin" asp-action="EditRole" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-area="Admin" asp-action="DeleteRole" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="contact-breadcrumb">
+
+                    <div class="breadcrumb-main add-contact justify-content-sm-between ">
+                        <div class=" d-flex flex-wrap justify-content-center breadcrumb-main__wrapper">
+                            <div class="d-flex align-items-center add-contact__title justify-content-center me-sm-25">
+                                <h4 class="text-capitalize fw-500 breadcrumb-title">Role List</h4>
+                                <span class="sub-title ms-sm-25 ps-sm-25"></span>
+                            </div>
+                            <div class="action-btn mt-sm-0 mt-15">
+                                <a asp-action="CreateRole" class="btn px-20 btn-primary ">
+                                    <i class="las la-plus fs-16"></i>Create
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <!-- ends: contact-breadcrumb -->
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 mb-30">
+                <div class="card">
+                    <div class="card-header color-dark fw-500">
+                        User List
+                    </div>
+                    <div class="card-body">
+
+                        <div class="userDatatable global-shadow border-light-0 w-100">
+                            <div class="table-responsive">
+                          <table>
+                                <tbody>
+                                    @foreach(var item in Model)
+                                        {
+                                            
+                                        
+                                        <tr>
+                                            
+                                            <td>
+                                                <div class="userDatatable-content">
+                                                    @item.Name
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <ul class="orderDatatable_actions mb-0 d-flex flex-wrap">
+                                                    <li>
+                                                            <a asp-action="EditRole" asp-route-id="@item.Id" class="edit">
+                                                            <i class="uil uil-edit"></i>
+                                                        </a>
+                                                    </li>
+                                                    <li>
+                                                            <a asp-action="DeleteRole" asp-route-id="@item.Id" class="remove">
+                                                            <i class="uil uil-trash-alt"></i>
+                                                        </a>
+                                                    </li>
+                                                </ul>
+                                            </td>
+                                        </tr>
+                                        }
+
+                                       
+                                </tbody>
+                              </table>
+                            </div>
+                        </div>
+                        
+
+                     </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="row">
+        <div class="row-xxl- col-md-6  mb-md-50 mb-30">
+            <div class="card banner-feature--9">
+                <div class="card-body">
+                    <h3 class="banner-feature__heading">Good Day</h3>
+                    <div class="banner-feature__shape mt-30">
+                        <img src="~/img/svg/group3396.svg" alt="img">
+                    </div>
+                </div>
+            </div>
+        </div>
+            </div>
+    </div>
+
+</div>
