Update(7.1.1v) Some Bugs Fixed

--- a/Main/Areas/Admin/Views/Categories/Index.cshtml
+++ b/Main/Areas/Admin/Views/Categories/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Category List";
     Layout = "Admin_Layout";
 }
-<div class="contents">
+<div class="contents" style="padding-left: 10px;">
 
     <div class="container-fluid">
         <div class="row">
