--- a/Main/Areas/Admin/Views/MusicEquipments/Create.cshtml
+++ b/Main/Areas/Admin/Views/MusicEquipments/Create.cshtml
@@ -2,7 +2,9 @@
 
 
 
-<div class="contents">
+<div class="contents" style="
+    padding-left: 15px;
+">
 
     <div class="container-fluid">
         <div class="row">
