--- a/Main/Areas/Tutor/Views/Courses/Index.cshtml
+++ b/Main/Areas/Tutor/Views/Courses/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Main.Models.TeacherModels.Course>
 @{
     ViewData["Title"] = "Index";
-    Layout = "Tutor_Layout";
+    Layout = "_Layout";
 }
 
 <h1 class="Title">Courses</h1>
