--- a/Main/Areas/Tutor/Views/Courses/Details.cshtml
+++ b/Main/Areas/Tutor/Views/Courses/Details.cshtml
@@ -24,6 +24,6 @@
    </div>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.CourseId">Edit</a> |
+    <a asp-area = "Tutor" asp-controller="Courses" asp-action="Edit" asp-route-id="@Model?.CourseId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
