--- a/Main/Areas/Tutor/Views/Courses/Index.cshtml
+++ b/Main/Areas/Tutor/Views/Courses/Index.cshtml
@@ -29,7 +29,7 @@
                     @Html.DisplayFor(modelItem => item.Price)
                 </td>
                 <td>
-                    <img width="150px" src="@Url.Content(item.CourseImg)" />
+                    <img width="150" src="@Url.Content(item.CourseImg)" />
                 </td>
                 <td>
                     <a asp-area="Tutor" asp-action="Edit" asp-route-id="@item.CourseId">Edit</a> |
