--- a/Main/Areas/Admin/Views/Categories/Create.cshtml
+++ b/Main/Areas/Admin/Views/Categories/Create.cshtml
@@ -6,17 +6,18 @@
 
 
 
+<div class="products_page product_page--grid mb-30">
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <!-- End: .columns-1 -->
+            <div class="columns-2 col-lg-12">
+
+                <div class="tab-content mt-25" id="ap-tabContent">
+                    <div class="tab-pane fade show active" id="ap-overview" role="tabpanel" aria-labelledby="ap-overview-tab">
+                        <!-- Start: Shop Item -->
+                        <div class="row product-page-list justify-content-center">
 
 
-<div class="contents" style="
-    padding-left: 10px;
-">
-
-
-    <div class="new-ticket mt-1">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-12">
 
                     <div class="breadcrumb-main">
                         <h4 class="text-capitalize breadcrumb-title">New Category</h4>
@@ -69,4 +70,6 @@
         </div>
     </div>
 
+</div>
+</div>
 </div>
