--- a/Main/Areas/Admin/Views/Categories/Delete.cshtml
+++ b/Main/Areas/Admin/Views/Categories/Delete.cshtml
@@ -7,15 +7,14 @@
 
 
 
-<div class="contents" style="
-    padding-left: 10px;
-">
+<div class="products_page product_page--grid mb-30">
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <!-- End: .columns-1 -->
+            <div class="columns-2 col-lg-12">
 
-
-    <div class="new-ticket mt-1">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-12">
+                <div class="tab-content mt-25" id="ap-tabContent">
+                    <div class="tab-pane fade show active" id="ap-overview" role="tabpanel" aria-labelledby="ap-overview-tab">
 
                     <div class="breadcrumb-main">
                         <h4 class="text-capitalize breadcrumb-title">Delete Category</h4>
@@ -66,4 +65,5 @@
         </div>
     </div>
 
+</div>
 </div>
