--- a/Main/Areas/Admin/Views/MusicEquipments/Create.cshtml
+++ b/Main/Areas/Admin/Views/MusicEquipments/Create.cshtml
@@ -1,15 +1,14 @@
 ﻿@model MusicEquipmentViewModel
 
 
-
-<div class="contents" style="
-    padding-left: 15px;
-">
-
+<div class="products_page product_page--grid mb-30">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="shop-breadcrumb">
+        <div class="row justify-content-center">
+            <!-- End: .columns-1 -->
+            <div class="columns-2 col-lg-12">
+
+                <div class="tab-content mt-25" id="ap-tabContent">
+                    <div class="tab-pane fade show active" id="ap-overview" role="tabpanel" aria-labelledby="ap-overview-tab">
 
                     <div class="breadcrumb-main">
                         <h4 class="text-capitalize breadcrumb-title">New Product</h4>
@@ -57,7 +56,7 @@
                                                 <!-- form group 2 -->
                                                 <div class="form-group">
 
-                                                    <label class="js-example-basic-single js-states form-control" id="countryOption" asp-for="categoryName">category</label>
+                                                    <label >category</label>
                                                     <select asp-for="categoryName" class="form-control" asp-items="ViewBag.categoryName"></select>
                                                 </div>
 
@@ -76,49 +75,6 @@
                                                     </div>
                                                 </div>
 
-                                                <!-- form group 4 -->
-                                                <div class="form-group quantity-appearance">
-                                                    <label>Discount</label>
-                                                    <div class="input-group">
-                                                        <div class="input-group-prepend">
-                                                            <span class="input-group-text" id="basic-addon2">
-                                                                <img class="svg" src="~/img/svg/percent.svg" alt="">
-                                                            </span>
-                                                        </div>
-                                                        <div class="pt_Quantity">
-                                                            <input type="number" class="form-control" min="0" max="100" step="1" value="0" data-inc="1"> <span>Not Working</span>
-                                                        </div>
-                                                    </div>
-                                                </div>
-
-                                                <!-- form group 5 -->
-                                                <div class="form-group status-radio add-product-status-radio mb-20">
-                                                    <label class="mb-15">status</label>
-                                                    <div class="d-flex">
-                                                        <div class="radio-horizontal-list d-flex flex-wrap">
-
-
-                                                            <div class="radio-theme-default custom-radio ">
-                                                                <input class="radio" type="radio" name="radio-optional" value=0 id="radio-hl1">
-                                                                <label for="radio-hl1">
-                                                                    <span class="radio-text">Published</span>
-                                                                </label>
-                                                            </div>
-
-
-
-
-                                                            <div class="radio-theme-default custom-radio ">
-                                                                <input class="radio" type="radio" name="radio-optional" value=0 id="radio-hl2">
-                                                                <label for="radio-hl2">
-                                                                    <span class="radio-text">draft</span>
-                                                                </label>
-                                                            </div>
-                                                            <span>Not Working</span>
-
-                                                        </div>
-                                                    </div>
-                                                </div>
 
                                                 <!-- form group 6 -->
                                                 <div class="form-group">
@@ -137,7 +93,6 @@
                                                                 <span class="upload-product-img px-10 d-block">
                                                                     <span class="file-upload">
                                                                         <img class="svg" src="~/img/svg/upload.svg" alt="">
-                                                                        <input asp-for="@Model.Img" id="upload" class="file-upload__input"  name="file-upload">
                                                                     </span>
                                                                     <span class="pera">Drag and drop an image</span>
                                                                     
@@ -200,4 +155,5 @@
         </div>
     </div>
 
+</div>
 </div>
