--- a/Main/Areas/Admin/Views/MusicEquipments/ViewProduct.cshtml
+++ b/Main/Areas/Admin/Views/MusicEquipments/ViewProduct.cshtml
@@ -1,6 +1,5 @@
 ﻿@model MusicEquipment
 
-<div class="contents">
     <form action="post" enctype="multipart/form-data">
     <div class="container-fluid">
         <div class="row">
@@ -58,26 +57,7 @@
                                     </div>
                                     <!-- End: Product Title -->
                                     <div class="product-item__content text-capitalize">
-                                        <!-- Start: Product Ratings -->
-                                        <div class="stars-rating d-flex align-items-center">
-                                            <span class="star-icon las la-star active"></span>
-                                            <span class="star-icon las la-star active"></span>
-                                            <span class="star-icon las la-star active"></span>
-                                            <span class="star-icon las la-star active"></span>
-                                            <span class="star-icon las la-star-half-alt active"></span>
-                                            <span class="stars-rating__point">4.9</span>
-                                            <span class="stars-rating__review">
-                                                <span>778</span> Reviews
-                                            </span>
-                                        </div>
-                                        <!-- End: Product Ratings -->
-                                        <!-- Start: Product Brand -->
-                                        <span class="product-details-brandName">
-                                            Brand:<span>
-                                                Louis
-                                                Poulsen
-                                            </span>
-                                        </span>
+                                       
                                         <span class="product-desc-price">
                                             <sub>$</sub> @Model.Price
                                         </span>
@@ -85,31 +65,7 @@
                                         <p class=" product-deatils-pera">
                                             @Model.About_It
                                         </p>
-                                        <!-- End: Product Description -->
-                                        <!-- Start: Product Stock -->
-                                        <div class="product-details__availability">
-                                            <div class="title">
-                                                <p>Available:</p>
-                                                <span class="stock">In stock</span>
-                                            </div>
-                                            <div class="title">
-                                                <p>Shipping:</p>
-                                                <span class="free"> Free</span>
-                                            </div>
-                                        </div>
-                                        <!-- End: Product Stock -->
-                                        <!-- Start: Product Quantity -->
-                                        <div class="quantity product-quantity flex-wrap">
-                                            <div class="me-15 d-flex align-items-center flex-wrap">
-                                                <p class="fs-14 fw-500 color-dark">Quantity:</p>
-                                                <input type="button" value="-" class="qty-minus bttn bttn-left wh-36">
-                                                <input type="number" value="1" class="qty qh-36 input">
-                                                <input type="button" value="+" class="qty-plus bttn bttn-right wh-36">
-                                            </div>
-                                            <span class="fs-13 fw-400 color-light my-sm-0 my-10">540 pieces available</span>
-                                        </div>
-                                        <!-- End: Product Quantity -->
-                                        <!-- Start: Product Selections -->
+                                  
                                         <div class="product-item__button mt-lg-30 mt-sm-25 mt-20 d-flex flex-wrap">
                                             <div class=" d-flex flex-wrap product-item__action align-items-center">
                                                 <button class="btn btn-primary btn-default btn-squared border-0 me-10 my-sm-0 my-2">
@@ -120,45 +76,7 @@
                                                     <img src="~/img/svg/shopping-bag.svg" alt="shopping-bag" class="svg">
                                                     Add To Cart
                                                 </button>
-                                                <div class="like-icon">
-                                                    <button type="button">
-                                                        <i class="lar la-heart icon"></i>
-                                                    </button>
-                                                </div>
-                                                <div class="like-icon me-15 my-sm-0 my-3 ">
-                                                    <button type="button">
-                                                        <img class="svg" src="~/img/svg/share-2.svg" alt="share-2">
-                                                    </button>
-                                                </div>
-                                            </div>
-                                            <div class="product-deatils__social my-xxl-0 my-10 d-flex align-items-center">
-                                                <ul class="d-flex">
-                                                    <li>
-                                                        <a href="#">
-                                                            <i class="lab la-facebook-f"></i>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">
-                                                            <i class="lab la-twitter"></i>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">
-                                                            <i class="lab la-pinterest"></i>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">
-                                                            <i class="lab la-linkedin-in"></i>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">
-                                                            <i class="lab la-telegram"></i>
-                                                        </a>
-                                                    </li>
-                                                </ul>
+
                                             </div>
                                         </div>
                                         <!-- End: Product Selections -->
@@ -169,12 +87,9 @@
                             <div class="product-details__availability">
                                 <div class="title">
                                     <p>Category:</p>
-                                    <span class="free">Furniture</span>
+                                    <span class="free">@Model.Category.categoryName</span>
                                 </div>
-                                <div class="title">
-                                    <p>Tags:</p>
-                                    <span class="free"> Blue, Green, Light</span>
-                                </div>
+
                             </div>
                             <!-- End: Product Availability -->
                             <!-- End: Product Details -->
@@ -187,4 +102,3 @@
 
     </div>
   </form>
-</div>
