--- a/Main/Areas/Admin/Views/MusicEquipments/Index.cshtml
+++ b/Main/Areas/Admin/Views/MusicEquipments/Index.cshtml
@@ -49,6 +49,7 @@
                                         </p>
                                         <a asp-area="Admin" asp-action="ViewProduct" asp-controller="MusicEquipments" asp-route-id="@item.Id" class="btn-md btn">View More</a>
                                         <a asp-area="Admin" asp-action="Edit" asp-controller="MusicEquipments" asp-route-id="@item.Id" class="btn-md btn">Edit</a>
+                                        <a asp-area="Admin" asp-action="Delete" asp-controller="MusicEquipments" asp-route-id="@item.Id" class="btn-md btn">Delete</a>
                                     </figcaption>
                                 </figure>
                             </div>
