--- a/Main/Views/Shared/Components/Equipment/Default.cshtml
+++ b/Main/Views/Shared/Components/Equipment/Default.cshtml
@@ -1,16 +1,14 @@
 ﻿@model IEnumerable<MusicEquipment>
+
+
 @foreach (var item in Model)
 {
-
+    <div class="cus-xl-3 col-lg-6 col-md-11 col-12 mb-30 px-10">
         <div class="card product product--grid" >
             <div class="h-100">
                 <div class="product-item">
                     <div class="product-item__image">
-                        <span class="like-icon">
-                            <button type="button" class="content-center">
-                                <i class="lar la-heart icon"></i>
-                            </button>
-                        </span>
+
                         <a asp-action="ViewProduct" asp-area="Admin" asp-controller="MusicEquipments" asp-route-id="@item.Id"><img  class="card-img-top img-fluid" src="@Url.Content(item.Img)" alt="digital-chair"></a>
                     </div>
                     <div class="card-body px-20 pb-25 pt-25" >
@@ -48,4 +46,6 @@
                 </div>
             </div>
         </div>
+        </div>
         }
+       
