Galaxy-Wave Version 2 (update 0.2) // signIn method not complete

--- a/GalaxyWave.UI/Views/Shared/_Layout.cshtml
+++ b/GalaxyWave.UI/Views/Shared/_Layout.cshtml
@@ -27,6 +27,11 @@
                         </li>
                     </ul>
                 </div>
+
+
+                <div>
+                    <a class="navbar-brand"  asp-area="AccessMethod" asp-controller="AccessPoint" asp-action="SignInPage"> Sign In </a>
+                </div>
             </div>
         </nav>
     </header>
